--- a/portfolio_notebooks/Titanic.ipynb
+++ b/portfolio_notebooks/Titanic.ipynb
@@ -91,8 +91,8 @@
    "outputs": [],
    "source": [
     "#Age is read as float, because later I'll need more precision for calculations.\n",
-    "train = pd.read_csv('../input/train.csv', dtype={'Age': np.float64}, )\n",
-    "test = pd.read_csv('../input/test.csv', dtype={'Age': np.float64}, )"
+    "df_train = pd.read_csv('../input/train.csv', dtype={'Age': np.float64}, )\n",
+    "df_test = pd.read_csv('../input/test.csv', dtype={'Age': np.float64}, )"
    ]
   },
   {
